<resources>
    <string name="app_name">JuegoDados</string>
    <string name="tiradas2">Tiradas:</string>
    <string name="ganadas">Ganadas:</string>
    <string name="ganadas2">Ganadas:</string>
    <string name="puntos">Puntos:</string>
    <string name="tiradas">Tiradas:</string>
    <string name="jugador_1">"Jugador "</string>
    <string name="reiniciar_partida">Reiniciar Partida</string>
    <string name="puntos2">Puntos:</string>
    <string name="juego_de_los_dados">Juego de los Dados</string>
    <string name="jugador2">Jugador2</string>
</resources>